--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10678,6 +10678,7 @@ header.masthead {
   background-size: contain;
   background-position: center top;
   background-attachment: scroll;
+  height:500px;
 }
 header.masthead:before {
   content: "";
