--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10673,10 +10673,10 @@ header.masthead {
   margin-bottom: 3rem;
   padding-top: calc(8rem + 57px);
   padding-bottom: 8rem;
-  background: no-repeat center top;
+/*   background: no-repeat center top; */
   background-color: #6c757d;
-  background-size: contain;
-  background-position: center center;
+/*   background-size: contain; */
+/*   background-position: center center; */
   background-attachment: scroll;
   min-height:500px;
 }
